<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Podcast Player</string>
    <string name="hello_rss">Howdy, Rss:) Enter a URL and press the button.</string>
    <string name="hello_fileManager">Hello, File Manager:)</string>
    <string name="dm_url">Enter a url to fetch</string>
    <string name="dm_filename">Enter a name for the downloaded file</string>
    <string name="action_settings">Settings</string>
    <string name="manage_podcasts">Manage Podcasts</string>
    <string name="visit_repository">Visit Podcast Repository</string>
    <string name="new_subscription">New Subscription RSS Feed URL</string>
    <string name="rss_feed_url">RSS Feed URL</string>
    <string name="title_activity_rss_test">RssTestActivity</string>
    <string name="title_activity_media_test">Podcast Player</string>
    <string name="action_tests">Tests</string>
    <string name="title_activity_tests">Tests</string>
    <string name="title_activity_media">Test Media</string>
    <string name="title_activity_download">TestDownloadManager</string>
    <string name="title_activity_dsubscription_settings">TestSubscriptionSettings</string>
    <string name="now_playing">Now Playing:</string>
    <string name="inital_time">0:00</string>
    <string name="current_title">Current Title</string>
    <string name="album_art_image">Album Art Image</string>
    <string name="rewind_button_image">Rewind Button Image</string>
    <string name="play_pause_button_image">Play/Pause Button Image</string>
    <string name="forward_button_image">Forward Button Image</string>
    <string name="top_tag1">Top Tag 1</string>
    <string name="top_tag2">Top Tag 2</string>
    <string name="top_tag3">Top Tag 3</string>
    <string name="top_tag4">Top Tag 4</string>
    <string name="search_lable">Search: </string>
    <string name="top_tags">Top Hits</string>
    <string name="enter_url">Enter the URL below</string>
    <string name="pref_prior_episodes_no">Number of Episodes</string>
    <string name="pref_prior_episodes_no_summary">Enter the number of Prior episodes to be downloaded</string>
    <string name="pref_automatically_download">Automatically Download </string>
    <string name="pref_automatically_download_summary">Automatically download new episodes</string>
    <string name="cleveland_browns">Cleveland Browns</string>
    <string name="pref_subscription_settings">Subscription Settings</string> 
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_update_frequency">Update Frequency</string>
    <string name="pref_update_frequency_summary">Set the update frequency</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="title_activity_podcast_details">Podcast Details</string>
    <string name="user_settings_fix">User Settings</string>
    <string name="ext_storage">Store on sdCard</string>
    <string name="wifi_only">Only Download when WiFi is available</string>
    <string name="save_changes">Save Changes</string>
    <string name="btn_usr_settings">User Settings</string>
    <string name="txtStatus">\"\"</string>
    <string name="action_home">Home</string>
    <string name="title_activity_directory">Podcast Directory</string>
    <string name="add_podcast">Add New Podcast</string>
</resources>
