<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_subscription_settings" >
        <Preference
            android:key="test"
            android:layout="@layout/subscription_settings_helper"
            android:title="test" />

        <ListPreference
            android:entries="@array/downloadEpisodes"
            android:entryValues="@array/downloadEpisodesValues"
            android:key="prefNumOfPriorEpisodes"
            android:summary="@string/pref_prior_episodes_no_summary"
            android:title="@string/pref_prior_episodes_no" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefAutomaticUpdates"
            android:summary="@string/pref_automatically_download_summary"
            android:title="@string/pref_automatically_download" >
        </CheckBoxPreference>

        <ListPreference
            android:entries="@array/updateFrequency"
            android:entryValues="@array/updateFrequencyValues"
            android:key="prefUpdateFrequency"
            android:summary="@string/pref_update_frequency_summary"
            android:title="@string/pref_update_frequency" />
     
    </PreferenceCategory>

</PreferenceScreen>