<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="edu.franklin.androidpodcastplayer.PlayPodcastActivity" xmlns:android="http://schemas.android.com/apk/res/android">
    
     <TextView
         android:id="@+id/textViewNowPlaying"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imageViewAlbumArt"
         android:text="@string/now_playing"
         android:textSize="12sp"/>
     
     <SeekBar
         android:id="@+id/seekVolume"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewTimeElapsed"
         android:layout_alignTop="@id/textViewNowPlaying"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp" />
     
     <TextView
       android:id="@+id/textViewTimeElapsed"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/imageButtonRewind"
       android:layout_alignTop="@+id/seekBarTimer"
       android:text="@string/inital_time"
       android:textSize="10sp"
       android:textAppearance="?android:attr/textAppearanceSmall" />
     
     <ImageView
         android:id="@+id/imageViewAlbumArt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/seekBarTimer"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/seekVolume"
         android:contentDescription="@string/album_art_image"
         android:src="@drawable/ic_launcher" />
     
	<SeekBar
	    android:id="@+id/seekBarTimer"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/imageButtonRewind"
	    android:layout_marginBottom="15dp"
	    android:layout_marginTop="15dp"
	    android:layout_toLeftOf="@+id/textViewIOverall"
	    android:layout_toRightOf="@+id/textViewTimeElapsed" />
	
	<TextView
	    android:id="@+id/textViewIOverall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageButtonForward"
	    android:layout_alignTop="@+id/seekBarTimer"
	    android:text="@string/inital_time"
	    android:textSize="10sp"
	    android:textAppearance="?android:attr/textAppearanceSmall" />
    
   <ImageButton
       android:id="@+id/imageButtonRewind"
       android:layout_width="72dp"
       android:layout_height="72dp"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:layout_marginBottom="14dp"
       android:contentDescription="@string/rewind_button_image"
       android:onClick="rewind"
       android:src="@drawable/ic_media_rew" />
    
   <ImageButton
       android:id="@+id/imageButtonForward"
       android:layout_width="72dp"
       android:layout_height="72dp"
       android:layout_alignRight="@+id/imageViewAlbumArt"
       android:layout_below="@+id/seekBarTimer"
       android:contentDescription="@string/forward_button_image"
       android:onClick="forward"
       android:src="@drawable/ic_media_ff" />

   <ImageButton
       android:id="@+id/imageButtonPlayPause"
       android:layout_width="72dp"
       android:layout_height="72dp"
       android:layout_alignTop="@+id/imageButtonForward"
       android:layout_centerHorizontal="true"
       android:contentDescription="@string/play_pause_button_image"
       android:onClick="MediaControl"
       android:src="@drawable/ic_media_play" />

   <ImageView
       android:id="@+id/imageVolume"
       android:layout_width="33dp"
       android:layout_height="33dp"
       android:layout_alignTop="@+id/seekVolume"
       android:layout_toLeftOf="@+id/seekVolume"
       android:src="@drawable/ic_volume_small" />
   
</RelativeLayout>