<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.franklin.androidpodcastplayer.TestsActivity" >

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchRssTest"
        android:text="@string/title_activity_rss_test" />

    <Button
        android:id="@+id/buttonTestMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSave"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignParentRight="true"
        android:onClick="launchMediaTest"
        android:text="@string/title_activity_media" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_below="@+id/btnSave"
        android:layout_marginTop="34dp"
        android:onClick="launchRepTest"
        android:text="Test Repository" />

    <Button
        android:id="@+id/buttonTestMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonTestMedia"
        android:layout_marginTop="34dp"
        android:layout_toRightOf="@+id/button2"
        android:onClick="launchMainTest"
        android:text="TestMain" />

    <Button
        android:id="@+id/buttonFileManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginTop="29dp"
        android:layout_toLeftOf="@+id/buttonTestMedia"
        android:onClick="launchFileManagerTest"
        android:text="Test FileManager" />

    <Button
        android:id="@+id/buttonTestSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFileManager"
        android:layout_marginTop="29dp"
        android:onClick="launchSubscriptionSettingsTest"
        android:text="Test SubscriptionSettings" />

    <Button
        android:id="@+id/buttonTestPodcastView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonFileManager"
        android:layout_below="@+id/buttonTestSettings"
        android:layout_marginTop="27dp"
        android:layout_toLeftOf="@+id/buttonTestMedia"
        android:onClick="launchPodcastViewTest"
        android:text="Test View Podcast" />

    <Button
        android:id="@+id/buttonUserSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTestPodcastView"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="22dp"
        android:onClick="launchUserSettingsTest"
        android:text="@string/btn_usr_settings" />

</RelativeLayout>